Tabs alignment issue fixed

--- a/src/main/java/org/ednovo/gooru/client/mvp/analytics/util/tabContainer.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/analytics/util/tabContainer.css
@@ -30,7 +30,7 @@
 	color: #515151 !important;
 	border: none !important;
 	border-radius: 0px !important;
-	padding: 12px 35px !important;
+	padding: 12px 33px !important;
 }
 .addButonStyle:hover{
 	background: #4C98CC !important;
